force-app/main/default/objects/CountryDetail__c/CountryDetail__c.object-meta.xml
<CustomObject>
    <description>Object to hold country metadata from APIs such as Restcountries</description>
    <label>Country Detail</label>
    <nameField>
        <label>Country Detail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Country Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>