force-app/main/default/objects/CountryDetail__c/fields/FlagUrl__c.field-meta.xml
<CustomField>
    <fullName>FlagUrl__c</fullName>
    <label>Flag URL</label>
    <length>64</length>
    <type>Text</type>
</CustomField>