force-app/main/default/objects/CountryDetail__c/fields/IsoCode2__c.field-meta.xml
<CustomField>
    <fullName>IsoCode2__c</fullName>
    <externalId>true</externalId>
    <label>Iso Code 2</label>
    <length>2</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>