force-app/main/default/objects/CountryDetail__c/fields/IsoCode3__c.field-meta.xml
<CustomField>
    <fullName>IsoCode3__c</fullName>
    <externalId>true</externalId>
    <label>Iso Code 3</label>
    <length>3</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>