force-app/main/default/objects/CountryDetail__c/fields/RegionalBlocs__c.field-meta.xml
<CustomField>
    <fullName>RegionalBlocs__c</fullName>
    <label>Regional Blocs</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>EU</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>