force-app/main/default/objects/CountryDetail__c/fields/Timezones__c.field-meta.xml
<CustomField>
    <fullName>Timezones__c</fullName>
    <label>Timezones</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>UTC+00:00</fullName>
            </value>
            <value>
                <fullName>UTC+01:00</fullName>
            </value>
            <value>
                <fullName>UTC+02:00</fullName>
            </value>
            <value>
                <fullName>UTC+03:00</fullName>
            </value>
            <value>
                <fullName>UTC+04:00</fullName>
            </value>
            <value>
                <fullName>UTC+05:00</fullName>
            </value>
            <value>
                <fullName>UTC+06:00</fullName>
            </value>
            <value>
                <fullName>UTC+07:00</fullName>
            </value>
            <value>
                <fullName>UTC+08:00</fullName>
            </value>
            <value>
                <fullName>UTC+09:00</fullName>
            </value>
            <value>
                <fullName>UTC+10:00</fullName>
            </value>
            <value>
                <fullName>UTC+11:00</fullName>
            </value>
            <value>
                <fullName>UTC+12:00</fullName>
            </value>
            <value>
                <fullName>UTC-01:00</fullName>
            </value>
            <value>
                <fullName>UTC-02:00</fullName>
            </value>
            <value>
                <fullName>UTC-03:00</fullName>
            </value>
            <value>
                <fullName>UTC-04:00</fullName>
            </value>
            <value>
                <fullName>UTC-05:00</fullName>
            </value>
            <value>
                <fullName>UTC-06:00</fullName>
            </value>
            <value>
                <fullName>UTC-07:00</fullName>
            </value>
            <value>
                <fullName>UTC-08:00</fullName>
            </value>
            <value>
                <fullName>UTC-09:00</fullName>
            </value>
            <value>
                <fullName>UTC-10:00</fullName>
            </value>
            <value>
                <fullName>UTC-11:00</fullName>
            </value>
            <value>
                <fullName>UTC-12:00</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>